added skeleton for fluid grid and responsive design

--- a/client/scripts/views/register-event.html
+++ b/client/scripts/views/register-event.html
@@ -1,4 +1,8 @@
-<h1>Register your event</h1>
+<div class="sixteen columns">
+	<h3>Register your event</h3>
+	<hr />
+<div>
+<div class="six columns alpha">
 	<dl>
 		<dt>
 			Name
@@ -25,17 +29,24 @@
 			<input data-id="endsAt" type="date" value="" placeholder="22:00" />
 		</dd>
 		<dt>
-			Description:
-		</dt>
-		<dd>
-			<textarea data-id="description"></textarea>
-		</dd>
-
-		<dt>
 			Location
 		</dt>
 		<dd>
 			<input data-id="location" type="text" placeholder="Locale,City" />
 		</dd>
 	</dl>
-	<button id="register">register</button>
+	
+</div>
+<div class="ten columns omega">
+	<dl>
+		<dt>
+			Description:
+		</dt>
+		<dd>
+			<textarea data-id="description" class="massive-height"></textarea>
+		</dd>
+	</dl>	
+</div>
+<div class="sixteen columns clearfix">
+	<button id="register">Register</button>
+<div>
