Added view for sign up. Changed register view. Added stubbed data on the backend.

--- a/client/scripts/views/organizer/register-event.html
+++ b/client/scripts/views/organizer/register-event.html
@@ -20,13 +20,13 @@
 			Starts at
 		</dt>
 		<dd>
-			<input data-id="startsAt" type="date" placeholder="18:00"/>
+			<input data-id="startsAt" type="time" placeholder="18:00"/>
 		</dd>
 		<dt>
 			Ends at
 		</dt>
 		<dd>
-			<input data-id="endsAt" type="date" value="" placeholder="22:00" />
+			<input data-id="endsAt" type="time" value="" placeholder="22:00" />
 		</dd>
 		<dt>
 			Location
@@ -34,6 +34,12 @@
 		<dd>
 			<input data-id="location" type="text" placeholder="Locale,City" />
 		</dd>
+		<dt>
+			Number of seats
+		</dt>
+		<dd>
+			<input data-id="numberOfSeats" type="number" placeholder="70" />
+		</dd>		
 	</dl>
 	
 </div>
